--- a/package.json
+++ b/package.json
@@ -12,19 +12,24 @@
     "dependencies": {
         "@nexus/schema": "0.15.0",
         "@prisma/client": "2.4.1",
+        "bcryptjs": "^2.4.3",
+        "dotenv": "^8.2.0",
+        "express-session": "^1.17.1",
         "graphql": "15.3.0",
         "graphql-yoga": "1.18.3",
+        "jsonwebtoken": "^8.5.1",
         "nexus-prisma": "0.13.0"
     },
     "devDependencies": {
         "@prisma/cli": "2.4.1",
+        "@types/bcryptjs": "^2.4.2",
+        "@types/dotenv": "^8.2.0",
+        "@types/express-session": "^1.17.0",
+        "@types/jsonwebtoken": "^8.5.0",
         "@types/node": "12.12.54",
         "@types/ws": "7.2.6",
         "ts-node": "8.10.2",
         "ts-node-dev": "1.0.0-pre.50",
         "typescript": "3.9.6"
-    },
-    "engines": {
-        "node": ">=10.0.0"
     }
 }
